application/k8s-manifests/golang-app-privileged-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golang-app-privileged
  labels:
    istio-injection: enabled
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
